crates/math-core/tests/snapshots/error_test__sup_closed.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{x^}"
---
Error: Expected argument but got closing token (`}`, `\end`, `\right`).
   ╭─[ <input>:1:4 ]
   │
 1 │ {x^}
   │    ┬  
   │    ╰── expected an argument here
───╯
